[project]
name = "pytop"
version = "1.0.0a0"
description = "Python System Monitor - htop clone in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
pytop = "pytop.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by formatter
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
